; ModuleID = '/home/carl/AnghaBench/systemd/src/fuzz/extr_fuzz-dhcp6-client.c_dhcp6_network_bind_udp_socket.c'
source_filename = "/home/carl/AnghaBench/systemd/src/fuzz/extr_fuzz-dhcp6-client.c_dhcp6_network_bind_udp_socket.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.in6_addr = type { i32 }

@AF_UNIX = common dso_local global i32 0, align 4
@SOCK_STREAM = common dso_local global i32 0, align 4
@SOCK_CLOEXEC = common dso_local global i32 0, align 4
@SOCK_NONBLOCK = common dso_local global i32 0, align 4
@test_dhcp_fd = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @dhcp6_network_bind_udp_socket(i32 %0, %struct.in6_addr* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.in6_addr*, align 8
  store i32 %0, i32* %3, align 4
  store %struct.in6_addr* %1, %struct.in6_addr** %4, align 8
  %5 = load i32, i32* @AF_UNIX, align 4
  %6 = load i32, i32* @SOCK_STREAM, align 4
  %7 = load i32, i32* @SOCK_CLOEXEC, align 4
  %8 = or i32 %6, %7
  %9 = load i32, i32* @SOCK_NONBLOCK, align 4
  %10 = or i32 %8, %9
  %11 = load i32*, i32** @test_dhcp_fd, align 8
  %12 = call i64 @socketpair(i32 %5, i32 %10, i32 0, i32* %11)
  %13 = icmp sge i64 %12, 0
  %14 = zext i1 %13 to i32
  %15 = call i32 @assert_se(i32 %14)
  %16 = load i32*, i32** @test_dhcp_fd, align 8
  %17 = getelementptr inbounds i32, i32* %16, i64 0
  %18 = load i32, i32* %17, align 4
  ret i32 %18
}

declare dso_local i32 @assert_se(i32) #1

declare dso_local i64 @socketpair(i32, i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
